# timm

./: .gitignore  .mcp.json  README.md  TASKS.md  pyproject.toml  run.py
.claude/skills/asms/: SKILL.md
corpus/: generate_corpus.py
deploy/: inference.py  keyflow_bridge.py  quantize.py  server.py  ui.html
docs/: 2026-03-31-agent-specific-model-synthesis.md
docs/adr/: 001-okr-micro-model.md
eval/: benchmark.py
model/: architecture.py  train.py
model/tokenizer/: train_tokenizer.py
spec/: doerr_constraints.yaml  role_spec.yaml
